test/errors/parser_error.vole
// Test: Parser error - expected expression
// Expected error: E1001 expected expression

func main() {
    let x =
}
